--- a/css/styles.css
+++ b/css/styles.css
@@ -581,7 +581,7 @@ Hero
     position: relative;
     padding: 60px 0 60px 0;
     min-height: 800px;
-    background: rgb(40, 70, 102) url('../img/formation-itinerante.jpg') no-repeat center center;
+    background: rgb(40, 70, 102) url('../img/goban.jpg') no-repeat center center;
     background-size: cover;
     color: #24374B;
 }
