--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,29 @@
 .jumbotron {
-  background-color: #dff0d8;
+  background-color: #2d2d2d;
+  color: #61dafb;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+label.panel-heading {
+  display: block;
+}
+
+li.vdo img {
+  width: 384px;
+  width: 280px;
+}
+
+iframe {
+  width: 800px;
+  height: 600px;
+}
+
+#form_insert_video button {
+  margin-bottom: 5px;
+}
+
+#form_insert_video input {
+  margin-left: 15px;
+  margin-bottom: 5px;
 }
