--- a/client/style.css
+++ b/client/style.css
@@ -9,9 +9,8 @@ label.panel-heading {
   display: block;
 }
 
-li.vdo img {
-  width: 384px;
-  width: 280px;
+span.disabled {
+  opacity: .7;
 }
 
 iframe {
